[FEAT] Use `display: contents` to prevent the wrapping link around an image from destroying the flexbox layout

--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,8 @@ body {
     transition-delay: 1s;
   }
    */ }
+  .thumbnail a {
+    display: contents; }
   .thumbnail__photo {
     width: 100%;
     background-size: cover;
