--- a/sass/components/_thumbnail.scss
+++ b/sass/components/_thumbnail.scss
@@ -15,6 +15,10 @@
   }
    */
 
+  a {
+    display: contents;
+  }
+
   &__photo {
     width: 100%;
     background-size: cover;
